--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput type="Password" placeholder="Password" value="" >
+          <input matInput type="Password" placeholder="Password">
+          <mat-error>*ngIf="Password?.error?.['required']"
+            Both upper and lower case latters. Atleast one number and symbol(like !@#$%^).
+          </mat-error>
         </mat-form-field>
-        <span>*password must be 8 charecter</span>
-        <span>*password have capital & small letter</span>
-        <span>*using @#$%&*</span>
-        <button mat-flat-button color="primary" style="color:rgb(128, 0, 32);" type="submit">Submit</button>
+        <button mat-flat-button color="primary" style="color:red;" type="submit">Submit</button>
         
     </form>
     
